exports[`test the subscription component matches the snapshot 1`] = `
<span>
  <span
    aria-label="Yoast SEO is inactive"
    className="JSgkp"
    role="img" />
  <span
    aria-label="Local SEO is inactive"
    className="bMBoOj"
    role="img" />
  <span
    aria-label="Video SEO is active"
    className="zjvCw"
    role="img" />
  <span
    aria-label="News SEO is inactive"
    className="kmesGi"
    role="img" />
  <span
    aria-label="WooCommerce SEO is active"
    className="jyjMPB"
    role="img" />
  <span
    aria-label="Local SEO for Woo is inactive"
    className="errgXr"
    role="img" />
</span>
`;

exports[`test the subscription component without active subscriptions using the default matches the snapshot 1`] = `
<span>
  <span
    aria-label="Yoast SEO is inactive"
    className="JSgkp"
    role="img" />
  <span
    aria-label="Local SEO is inactive"
    className="bMBoOj"
    role="img" />
  <span
    aria-label="Video SEO is inactive"
    className="djMGUE"
    role="img" />
  <span
    aria-label="News SEO is inactive"
    className="kmesGi"
    role="img" />
  <span
    aria-label="WooCommerce SEO is inactive"
    className="eGUVQp"
    role="img" />
  <span
    aria-label="Local SEO for Woo is inactive"
    className="errgXr"
    role="img" />
</span>
`;
